Issue #422: Develop SQL Extension
* Updated JdbcConfiguration to utilize text blocks.